# sam-bedrock-kb-oss-rag

./: README.md  pyproject.toml  samconfig.toml  template.yaml
function/: index.py
layer/: requirements.txt
