[tool.poetry]
name = "sam-bedrock-kb-oss-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "function/*" }
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.112"
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"
pyproject-flake8 = "^7.0.0"
pyproject-autoflake = "^1.0.2"
opensearch-py = "^2.5.0"
cfnresponse = "^1.1.4"

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = "E203, E501, W503"

[tool.mypy]
# common
python_version = 3.11
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
